--- a/docs/app/docs/components/checkbox/page.mdx
+++ b/docs/app/docs/components/checkbox/page.mdx
@@ -5,6 +5,7 @@ description: Showcase and usage guide of the checkbox component
 
 import DefaultCheck, {ChecksColored, ChecksContent} from './_checkbox';
 import {Callout, Table} from 'nextra/components';
+import {Detail} from '../../../_util';
 
 # Checkbox
 
@@ -12,16 +13,14 @@ The checkbox component is a UI element that allows users to select or deselect a
 
 <DefaultCheck/>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Checkbox checked={checked} onChange={(e) => {setChecked(e.target.checked)}}/>
   <Checkbox defaultChecked/>
   <Checkbox disabled/>
   <Checkbox defaultChecked disabled/>
   ```
-</details>
+</Detail>
 
 ## Content
 The `children` prop allows you to add extra content to the checkbox component. \
@@ -29,9 +28,7 @@ This content is rendered within a `label` element that is associated with the ch
 
 <ChecksContent/>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Checkbox checked={checked} onChange={(e) => {setChecked(e.target.checked)}}>
     Checkbox content
@@ -41,7 +38,7 @@ This content is rendered within a `label` element that is associated with the ch
     Disabled checkbox content
   </Checkbox>
   ```
-</details>
+</Detail>
 
 ## Color
 
@@ -49,9 +46,7 @@ You can customize the checkmark color using any value supported by the `backgrou
 
 <ChecksColored/>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Checkbox color={'red'} defaultChecked/>
   <Checkbox color={'#11aa33'} defaultChecked/>
@@ -59,7 +54,7 @@ You can customize the checkmark color using any value supported by the `backgrou
   <Checkbox color={'rgb(181,46,213)'} defaultChecked/>
   <Checkbox color={'rgb(0,0,0)'} defaultChecked disabled/>
   ```
-</details>
+</Detail>
 
 <Callout>
   The color of a disabled checkbox cannot be overwritten.
