--- a/docs/app/docs/components/dialog-title/page.mdx
+++ b/docs/app/docs/components/dialog-title/page.mdx
@@ -6,6 +6,7 @@ description: Showcase and usage guide of the dialog-title component
 import Title, {DialogAC, DialogTitleBasic, DialogTitleColor} from './_dialogTitle';
 import styles from '@/styles/styles.module.scss';
 import {Callout, Table} from 'nextra/components';
+import {Detail} from '../../../_util';
 
 # DialogTitle
 
@@ -13,9 +14,7 @@ This component is a utility component designed for the [`Dialog`](/docs/componen
 
 <DialogTitleBasic/>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Button variant={'outlined'} onClick={() => {setIsVisible(true)}}>Show Dialog</Button>
 
@@ -29,7 +28,7 @@ This component is a utility component designed for the [`Dialog`](/docs/componen
     </DialogControls>
   </Dialog>
   ```
-</details>
+</Detail>
 
 <Callout type={'warning'}>
   Since `dialogTitle` is a utility component, using it outside the `dialog` component will just render the content of the component:
@@ -52,9 +51,7 @@ The background-color of the dialog-title can be changed based on the dialog's co
   <DialogTitleColor color={'error'}/>
 </div>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Button variant={'outlined'} onClick={() => {setIsVisible(true)}}>Show Dialog</Button>
 
@@ -68,7 +65,7 @@ The background-color of the dialog-title can be changed based on the dialog's co
     </DialogControls>
   </Dialog>
   ```
-</details>
+</Detail>
 
 ## Accessibility 
 
@@ -76,9 +73,7 @@ Use the `id` prop in combination with the dialog's `labelledby` prop to add addi
 
 <DialogAC/>
 
-<details>
-  <summary>Expand code</summary>
-
+<Detail>
   ```jsx
   <Button variant={'outlined'} onClick={() => {setIsVisible(true)}}>Show Dialog</Button>
 
@@ -92,7 +87,7 @@ Use the `id` prop in combination with the dialog's `labelledby` prop to add addi
     </DialogControls>
   </Dialog>
   ```
-</details>
+</Detail>
 
 ## Props
 
