adds accordion documentation

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -98,6 +98,11 @@ View all available components and learn how to use them.
 
 <Cards>
   <Cards.Card
+    title="Accordion"
+    href="/docs/components/accordion"
+  />
+  
+  <Cards.Card
     title="Details"
     href="/docs/components/details"
   />
