adds breadcrumbs documentation

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -112,3 +112,12 @@ View all available components and learn how to use them.
     href="/docs/components/tag"
   />
 </Cards>
+
+## Navigation 
+
+<Cards>
+  <Cards.Card
+    title="Breadcrumbs"
+    href="/docs/components/breadcrumbs"
+  />
+</Cards>
