adds aria-label attribute to expand button

--- a/docs/app/docs/components/breadcrumbs/page.mdx
+++ b/docs/app/docs/components/breadcrumbs/page.mdx
@@ -147,6 +147,12 @@ Use the `beforeCollapse` & `afterCollapse` props to change the default behaviour
     <Table.Td>Use the darkmode style</Table.Td>
   </Table.Tr>
   <Table.Tr>
+    <Table.Td>expandButtonLabel</Table.Td>
+    <Table.Td>`string`</Table.Td>
+    <Table.Td><b>expand</b></Table.Td>
+    <Table.Td>Sets the aria-label attribute of the collapse button</Table.Td>
+  </Table.Tr>
+  <Table.Tr>
     <Table.Td>highlightLast</Table.Td>
     <Table.Td>`boolean`</Table.Td>
     <Table.Td><b>false</b></Table.Td>
