adds aria-label prop

--- a/docs/app/docs/components/progress/page.mdx
+++ b/docs/app/docs/components/progress/page.mdx
@@ -148,6 +148,12 @@ The `color` prop allows you to change the color of the progress-bar.
   </thead>
   <tbody>
   <Table.Tr>
+    <Table.Td>aria-label</Table.Td>
+    <Table.Td>`string`</Table.Td>
+    <Table.Td><b>Linear/Circular progressbar</b></Table.Td>
+    <Table.Td>Sets the aria-label attribute for the node with the role progressbar</Table.Td>
+  </Table.Tr>
+  <Table.Tr>
     <Table.Td>color</Table.Td>
     <Table.Td>`string`</Table.Td>
     <Table.Td><b>info</b></Table.Td>
