renames heading in hooks overview

--- a/docs/app/docs/hooks/page.mdx
+++ b/docs/app/docs/hooks/page.mdx
@@ -11,7 +11,7 @@ import { Cards } from 'nextra/components'
 
 View all available hooks and learn how to use them.
 
-## Inputs
+## Hooks
 <Cards>
   <Cards.Card
     title="useContrastColor"
