* adds pagination documentation

--- a/docs/app/docs/components/page.mdx
+++ b/docs/app/docs/components/page.mdx
@@ -120,4 +120,9 @@ View all available components and learn how to use them.
     title="Breadcrumbs"
     href="/docs/components/breadcrumbs"
   />
+
+  <Cards.Card
+    title="Pagination"
+    href="/docs/components/pagination"
+  />
 </Cards>
